--- a/learn-vue-js/my/location.html
+++ b/learn-vue-js/my/location.html
@@ -93,10 +93,20 @@
         .location-confirm > button{
             width:200px;
         }
-        
+
+        .subject{
+            font-size:28px;
+            font-weight: bold;
+        }
+        .barrier{
+            border: 2px solid black;
+            margin : 20px  0px 40px 0px ;
+        }
     </style>
 </head>
 <body>
+    <div class="subject">위치등록</div>
+    <hr class="barrier">
     <div class="main">
         <div class="location-check">
             <button class="location-btn">내 위치 확인하기</button>
