--- a/learn-vue-js/my/basic.html
+++ b/learn-vue-js/my/basic.html
@@ -7,7 +7,7 @@
 
 
 <title>페이지 제작</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<!--header-->
