--- a/Webpack/LearnWebpack/getting-started-complete/index.html
+++ b/Webpack/LearnWebpack/getting-started-complete/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <html>
   <head>
     <title>Webpack Demo</title>
@@ -6,9 +5,6 @@
   </head>
   <body>
     <!-- <script src="src/index.js"></script> -->
-    <script src="dist/main.js"></script>
-
-
-    
+    <script src="./dist/main.js"></script>
   </body>
 </html>
